tests/cases/typecheck/enums/discriminants/duplicate_discriminants.stderr
error[0061]: discriminant value `0` assigned more than once
 --> $DIR/duplicate_discriminants.hash:5:7
4 |   Direction := enum(
5 |       #[discriminant(0)]
  |         ^^^^^^^^^^^^^^^ `0` originally assigned here
6 |       Up,

 --> $DIR/duplicate_discriminants.hash:7:7
6 |       Up,
7 |       #[discriminant(0)]
  |         ^^^^^^^^^^^^^^^ `0` assigned here
8 |       Right,
